inseri classes no html

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head><link rel="stylesheet" href="style.css">
 <body>
-    <header>
+    <header class="cabecalho">
         <h1>teremos uma imagem</h1>
-        <ul>
-            <li>curso</li>
-            <li>projetos</li>
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lista-item">curso</li>
+            <li class="cabecalho-lista-item">projetos</li>
         </ul>
 
     </header>
