--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head><link rel="stylesheet" href="style.css">
 <body>
     <header class="cabecalho">
-        
+        <img class="cabecalho-imagem" src="DE.png" alt="logo Diretoria de Ensino Região de Adamantina"
         
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">curso</li>
