--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head><link rel="stylesheet" href="style.css">
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="logo educacao.png" alt="logo Secretaria da Educação do Estado de São Paulo">
-        <img class="cabecalho-imagem" src="DE.png" alt="logo Diretoria de Ensino Região de Adamantina">
+        <img class="cabecalho-imagem1" src="logo educacao.png" alt="logo Secretaria da Educação do Estado de São Paulo">
+        <img class="cabecalho-imagem2" src="DE.png" alt="logo Diretoria de Ensino Região de Adamantina">
         
         <ul class="cabecalho-lista">
             <li class="cabecalho-lista-item">curso</li>
