--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head><link rel="stylesheet" href="style.css">
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem1" src="avatares-secretarias-215.png" alt="avatares-secretarias-215.png">
+        <img class="cabecalho-imagem1" src="logo-educacao-atual.png" alt="logo-educacao-atual.png">
         <img class="cabecalho-imagem2" src="DE.png" alt="logo Diretoria de Ensino Região de Adamantina">
         
         <ul class="cabecalho-lista">
