add seção projetos

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
     </header>
 
     <section class="projeto">
+        <h2 class="projeto-título">Nossos Projetos</h2>
 
         <iframe src="https://scratch.mit.edu/projects/887452379/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/887531373/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 
     </section>
     </body>
