--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <section class="projeto">
-        <h2 class="projeto-título">Nossos Projetos</h2>
+        <h2 class="projeto-titulo">Nossos Projetos</h2>
 
         <div class="projeto-div">
 
