--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
 
     </header>
 
+    <section class="curso">
+        <div class="curso-div-conteudo">
+            <h2 class="curso-titulo">Sobre o Curso</h2>
+            <p class="curso-texto-um">A jornada em nossa Diretoria de Ensino teve inicio com o chamamento do PEC José Antonio  pelo Diário Oficial nos dias 30,  31 de agosto  e 13, 14 de setembro para os professores com aulas atribuídas de Tecnologia e Inovação.
+                Nestes encontros partilha de muitas angústias, superação e grandes descobertas. 
+                Desta forma a jornada foi espalhada pelas 33 escolas da Diretoria de Ensino</p>
+        </div>
+    </section>
+
     <section class="projeto">
         <h2 class="projeto-titulo">Nossos Projetos</h2>
 
