--- a/index.html
+++ b/index.html
@@ -20,10 +20,13 @@
     <section class="curso">
         <div class="curso-div-conteudo">
             <h2 class="curso-titulo">Sobre o Curso</h2>
-            <p class="curso-texto-um">A jornada em nossa Diretoria de Ensino teve inicio com o chamamento do PEC José Antonio  pelo Diário Oficial nos dias 30,  31 de agosto  e 13, 14 de setembro para os professores com aulas atribuídas de Tecnologia e Inovação.
-                Nestes encontros partilha de muitas angústias, superação e grandes descobertas. 
-                Desta forma a jornada foi espalhada pelas 33 escolas da Diretoria de Ensino</p>
-        </div>
+            <p class="curso-texto-um">A jornada em nossa Diretoria de Ensino teve inicio com o chamamento do PEC José Antonio  pelo Diário Oficial nos dias 30,  31 de agosto  e 13, 14 de setembro para os professores com aulas atribuídas de Tecnologia e Inovação.</p>
+            <p class="curso-texto-dois">Nestes encontros partilha de muitas angústias, superação e grandes descobertas.</p>
+            <p class="curso-texto-tres">Desta forma a jornada foi espalhada pelas 33 escolas da Diretoria de Ensino</p>
+            <div>
+                
+            </div>
+     </div>
     </section>
 
     <section class="projeto">
