--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
             <p class="curso-texto-dois"></p>Nestes encontros partilha de muitas angústias, superação e grandes descobertas.</p>
             <p class="curso-texto-tres" ></p> Desta forma a jornada foi espalhada pelas 33 escolas da Diretoria de Ensino.</p>
-        <div>
-            <iframe src="https://www.youtube.com/embed/-qa81T2_TLc" frameborder="0" width="363.75" height="301.50" alt="vídeo Sobrevoo pela Diretoria de Ensino Regional Adamantina">
+        <div class="vídeo">
+            <iframe src="https://www.youtube.com/embed/-qa81T2_TLc" frameborder="0" width="363.75" height="301.50" alt="vídeo Sobrevoo pela Diretoria de Ensino Regional Adamantina"></iframe>
         </div>
         </div>
     </section>
