--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     </section>
     
     <section class="projeto">
+        <div> class=<projetos></projetos>
         <h2 class="projeto-titulo">Os Nossos Projetos</h2>
-        
         <div class="projeto-div">
             <iframe src="https://scratch.mit.edu/projects/887452379/embed" allowtransparency="true" width="363.75" height="301.50" frameborder="0" scrolling="no" allowfullscreen></iframe>
             <iframe src="https://scratch.mit.edu/projects/887531373/embed" allowtransparency="true" width="363.75" height="301.50" frameborder="0" scrolling="no" allowfullscreen></iframe>
