--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
     <section class="curso">
         <div class="curso-div-conteudo">
             <h2 class="curso-titulo">Sobre o Curso</h2>
-            <p class="curso-texto-um"></p> A nossa jornada na Diretoria de Ensino teve inicio com o chamado pelo PEC José Antonio através de convocação no Diário Oficial para Orientações Técnicas nos dias 30 e 31 de agosto e 13 e 14 de setembro aos professores de Tecnologia e Inovação das 33 escolas pertencentes a DE.</p>
-
-            <p class="curso-texto-dois"></p>Nestes encontros partilha de muitas angústias, superação e grandes descobertas.</p>
-            <p class="curso-texto-tres" ></p> Desta forma a jornada foi espalhada pelas 33 escolas da Diretoria de Ensino.</p>
+            <p class="curso-texto-um"></p>A nossa jornada na Diretoria de Ensino teve inicio com o chamado pelo PEC José Antonio através de convocação no Diário Oficial para Orientações Técnicas nos dias 30 e 31 de agosto e 13 e 14 de setembro aos professores de Tecnologia e Inovação das 33 escolas pertencentes a DE.</p>
+            <p class="curso-texto-dois"></p>Nos encontros de formação em programação pelo Scratch partilhamos angustias, vitórias, superação, conhecimento e grandes descobertas.</p>
+            <p class="curso-texto-tres" ></p>Desta forma a joranada dos heróis foi disseminada por todas as 33 escolas da Diretoria de Ensino.</p>
         <div class="vídeo">
             <iframe src="https://www.youtube.com/embed/-qa81T2_TLc" frameborder="0" width="363.75" height="301.50" alt="vídeo Sobrevoo pela Diretoria de Ensino Regional Adamantina"></iframe>
         </div>
